Downgrade to Java 17